# reth-bsc

./: Cargo.toml  DEPLOYMENT.md  LICENSE  README.md  build.rs  run_bsc_server.sh
.github/workflows/: ci.yml
docs/: DATABASE_INTEGRATION.md
examples/: consensus_factory_usage.rs  curl_examples.md  launch_with_persistence.rs  test_genesis_snapshot.rs  test_mainnet_genesis.rs  test_mainnet_genesis_snapshot.rs  test_parlia_api.rs  test_persistence_enabled.rs
examples/parlia_api/parlia_getSnapshot/: request.json  response.json
scripts/: start_mainnet_debug.sh  start_testnet.sh
src/: cli.rs  lib.rs  main.rs  shared.rs
src/chainspec/: bsc.rs  bsc_chapel.rs  mod.rs  parser.rs
src/consensus/: mod.rs
src/consensus/parlia/: attestation.rs  consensus.rs  constants.rs  db.rs  engine.rs  error.rs  gas.rs  go_rng.rs  hertz_patch.rs  hooks.rs  mod.rs  parlia.rs  provider.rs  seal.rs  slash_pool.rs  snapshot.rs  transaction_splitter.rs  util.rs  validation.rs  validations.rs  validator.rs  vote.rs  vote_pool.rs
src/consensus/parlia/engine/: types.rs
src/consensus/parlia/tests/: mod.rs  snapshot_persistence.rs
src/evm/: blacklist.rs  handler.rs  mod.rs  spec.rs  transaction.rs  txs_to_create.txt
src/evm/api/: ctx.rs  exec.rs  mod.rs
src/evm/precompiles/: bls.rs  cometbft.rs  double_sign.rs  error.rs  iavl.rs  mod.rs  tendermint.rs
src/hardforks/: bsc.rs  mod.rs
src/node/: builder.rs  cli.rs  consensus.rs  consensus_factory.rs  engine.rs  mod.rs  primitives.rs  storage.rs
src/node/engine_api/: payload.rs  validator.rs
src/node/evm/: assembler.rs  config.rs  error.rs  executor.rs  factory.rs  mod.rs  post_execution.rs  pre_execution.rs  util.rs
src/node/evm/patch/: mod.rs
src/node/network/: bootnodes.rs  handshake.rs  mod.rs  upgrade_status.rs  votes.rs
src/node/network/block_import/: handle.rs  mod.rs  service.rs
src/node/network/bsc_protocol/: stream.rs
src/node/network/bsc_protocol/protocol/: handler.rs  proto.rs
src/node/rpc/: block.rs  call.rs  mod.rs  transaction.rs
src/node/rpc/engine_api/: builder.rs  mod.rs  payload.rs  validator.rs
src/rpc/: mod.rs  parlia.rs
src/system_contracts/: abi.rs  feynman_fork.rs  mod.rs  tx_maker_ext.rs
tests/: bsc_real_block_validation.rs  cometbft_new_schema.rs  e2e_flow.rs  ecdsa_seal_verification.rs  engine_api_validation.rs  finality_rewards.rs  flow_hooks.rs  parlia_header_validation.rs  ramanujan_block_time_validation.rs  seal_hash_bsc_reference.rs  slash_pool.rs  stress_test_integration.rs  system_contracts_fork_upgrades.rs  vote_attestation_bls.rs
