[package]
name = "reth_bsc"
version = "0.1.0"
edition = "2021"

[lib]
name = "reth_bsc"
path = "src/lib.rs"

[[bin]]
name = "reth-bsc"
path = "src/main.rs"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b", features = ["test-utils"] }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b", features = ["serde"] }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b", features = ["test-utils"] }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b", features = ["test-utils"] }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b", features = ["test-utils"] }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "8e0ff926b" }
revm = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }

# alloy dependencies
alloy-evm = { git = "https://github.com/will-2012/wrapper-evm", rev = "9ea0abcc98e01c51f77ea6e40194df732e7cf21b" }

alloy-genesis = "1.0.17"
alloy-consensus = "1.0.17"
alloy-eips = "1.0.17"
alloy-network = "1.0.17"
alloy-rpc-types = { version = "1.0.17", features = ["engine"] }
alloy-rpc-types-eth = "1.0.17"
alloy-rpc-types-engine = "1.0.17"
alloy-signer = "1.0.17"

alloy-chains = "0.2.0"
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }

alloy-dyn-abi = "1.2.0"
alloy-json-abi = { version = "1.2.0", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false, features = ["map-foldhash"] }
alloy-sol-macro = "1.2.0"
alloy-sol-types = { version = "1.2.0", default-features = false }

jsonrpsee = "0.25.1"
jsonrpsee-core = { version = "0.25.1" }
jsonrpsee-types = "0.25.1"

# misc dependencies
auto_impl = "1"
async-trait = "0.1"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
cfg-if = { version = "1.0", default-features = false }
derive_more = "0.99"
eyre = "0.6"
futures = "0.3"
lazy_static = "1.4.0"
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
parity-bytes = { version = "0.1.2", default-features = false }
parking_lot = "0.12"
secp256k1 = { version = "0.28", features = ["global-context", "std", "recovery"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"


# precompiles deps
bls_on_arkworks = "0.3.0"

cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client-verifier = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-proto = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }

prost = { version = "0.12.6" }

tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", rev = "8c21ccbd58a174e07eed2c9343e63ccd00f0fbd5", features = ["secp256k1"] }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
dev = [
    "reth-cli-commands/arbitrary",
    "reth/dev",
    "revm/dev",
]

serde = [
    "alloy-chains/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
    "bytes/serde",
    "parking_lot/serde",
    "reth-eth-wire/serde",
    "reth-eth-wire-types/serde",
    "reth-ethereum-forks/serde",
    "reth-ethereum-primitives/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-primitives-traits/serde",
    "reth-revm/serde",
    "reth-trie-common/serde",
    "reth-trie-db/serde",
    "revm/serde",
    "secp256k1/serde",
]

client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "reth-rpc-eth-api/client",
]

[patch.crates-io]
# Patch alloy-evm to use will-2012/wrapper-evm
alloy-evm = { git = "https://github.com/will-2012/wrapper-evm", rev = "9ea0abcc98e01c51f77ea6e40194df732e7cf21b" }
# Patch revm and its sub-crates to use will-2012/revm PR #2
revm = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-bytecode = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-context = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-context-interface = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-database = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-database-interface = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-handler = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-inspector = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-interpreter = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-precompile = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-primitives = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }
revm-state = { git = "https://github.com/will-2012/revm", rev = "cb70230b5c1df6d1d7d8632d42612aac4d07a8f1" }