[package]
name = "reth_bsc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "reth_bsc"
path = "src/lib.rs"

[[bin]]
name = "reth-bsc"
path = "src/main.rs"

[dependencies]
reth = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b", features = ["test-utils"] }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-ethereum-forks = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b", features = ["serde"] }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-eth-wire-types = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-network = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b", features = ["test-utils"] }
reth-network-p2p = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b", features = ["test-utils"] }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b", features = ["test-utils"] }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", rev = "6487f0b" }
revm = "27.0.3"

# alloy dependencies
alloy-evm = "0.16.1"

alloy-genesis = "1.0.22"
alloy-consensus = "1.0.22"
alloy-eips = "1.0.22"
alloy-network = "1.0.22"
alloy-rpc-types = { version = "1.0.22", features = ["engine"] }
alloy-rpc-types-eth = "1.0.22"
alloy-rpc-types-engine = "1.0.22"
alloy-signer = "1.0.22"

alloy-chains = "0.2.0"
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }

alloy-dyn-abi = "1.2.0"
alloy-json-abi = { version = "1.2.0", default-features = false }
alloy-primitives = { version = "1.2.0", default-features = false, features = ["map-foldhash"] }
alloy-sol-macro = "1.2.0"
alloy-sol-types = { version = "1.2.0", default-features = false }

jsonrpsee = "0.25.1"
jsonrpsee-core = { version = "0.25.1" }
jsonrpsee-types = "0.25.1"

# misc dependencies
auto_impl = "1"
async-trait = "0.1"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
cfg-if = { version = "1.0", default-features = false }
derive_more = "0.99"
eyre = "0.6"
futures = "0.3"
lazy_static = "1.4.0"
phf = { version = "0.11", features = ["macros"] }
once_cell = { version = "1.19", default-features = false, features = ["alloc"] }
parity-bytes = { version = "0.1.2", default-features = false }
parking_lot = "0.12"
secp256k1 = { version = "0.28", features = ["global-context", "std", "recovery"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.36", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"


# precompiles deps
bls_on_arkworks = "0.3.0"

cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client-verifier = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-proto = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }

prost = { version = "0.12.6" }

tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", rev = "8c21ccbd58a174e07eed2c9343e63ccd00f0fbd5", features = ["secp256k1"] }

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = "0.6"
tikv-jemallocator = { version = "0.6", optional = true }
libc = "0.2"

[features]
default = ["jemalloc"]
jemalloc = ["dep:tikv-jemallocator"]
dev = [
    "reth-cli-commands/arbitrary",
    "reth/dev",
    "revm/dev",
]

asm-keccak = [
    "reth-node-core/asm-keccak",
    "reth-primitives/asm-keccak",
    "reth-node-ethereum/asm-keccak",
]

serde = [
    "alloy-chains/serde",
    "alloy-consensus/serde",
    "alloy-eips/serde",
    "alloy-primitives/serde",
    "alloy-rpc-types-engine/serde",
    "alloy-rpc-types-eth/serde",
    "bytes/serde",
    "parking_lot/serde",
    "reth-eth-wire/serde",
    "reth-eth-wire-types/serde",
    "reth-ethereum-forks/serde",
    "reth-ethereum-primitives/serde",
    "reth-network/serde",
    "reth-network-api/serde",
    "reth-primitives-traits/serde",
    "reth-revm/serde",
    "reth-trie-common/serde",
    "reth-trie-db/serde",
    "revm/serde",
    "secp256k1/serde",
]

client = [
    "jsonrpsee/client",
    "jsonrpsee/async-client",
    "reth-rpc-eth-api/client",
]

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
